--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "compilerOptions": { "esModuleInterop": true }
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "strict": true,
+    "lib": ["ESNext"]
+  }
 }
